syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "account_info.proto";

option go_package = "github.com/itsscb/df/pb";

message UpdateAccountInfoRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Update AccountInfo";
          description: "Update an AccountInfo";
          required: [
            "id"
            ];
        };
        example: "{\"account_id\": \"1\", \"street\": \"Death Star 2\"}";
    };
    uint64 account_id = 1;
    optional string firstname = 4;
    optional string lastname = 5;
    optional string street = 6;
    optional string city = 7;
    optional string zip = 8;
    optional string country = 9;
    optional string phone = 10;
    optional google.protobuf.Timestamp birthday = 11 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        example: "\"1990-10-05T00:00:00Z\""
    }];
}

message UpdateAccountInfoResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "Updated Account";
          description: "Returns the updated Account";
        };
    };
    AccountInfo account_info = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}